# ecmd-pdbg

./: .gitignore  .gitmodules  README.md  autogen.sh  config.py  makefile  makefile.base  meson.build  meson_options.txt
dt/: 2-socket-bmc-p9n.dts.m4  2-socket-host-p9n.dts.m4  2-socket-p9n.dts.m4  common.m4  p9-fake.dts.m4  p9n-c.dts.m4  p9n-capp.dts.m4  p9n-eq.dts.m4  p9n-ex.dts.m4  p9n-mca.dts.m4  p9n-mcbist.dts.m4  p9n-mcs.dts.m4  p9n-nv.dts.m4  p9n-obrick.dts.m4  p9n-obus.dts.m4  p9n-occ.dts.m4  p9n-pec.dts.m4  p9n-perv.dts.m4  p9n-phb.dts.m4  p9n-ppe.dts.m4  p9n-sbe.dts.m4  p9n-xbus.dts.m4  p9n.dts.m4
scripts/: make-pbplugin.sh  pb-plugin.conf
src/: meson.build
src/common/: ecmdDefines.H  edbgCommon.C  edbgCommon.H  edbgOutput.C  edbgOutput.H  edbgReturnCodes.H  pdbgCommon.H  pdbgOutput.C  pdbgOutput.H  pdbgReturnCodes.H
src/dll/: ecmdDllUnitId.C  edbgCipDll.C  edbgEcmdDll.C  edbgEcmdDllInfo.C  edbgEcmdSimDll.C  edbgFapi2Dll.C  fapi2DllCapi.H  pdbgEcmdDll.C  pdbgEcmdDllInfo.C
src/istep/: edbgIstep.C  edbgIstep.H
src/istep/p10/help/: istep_list.htxt
src/p10/: p10_edbgCipDllInstrCtrl.C  p10_edbgCipDllInstrCtrl.H  p10_edbgEcmdDllScom.C  p10_edbgEcmdDllScom.H
src/p10/ekb/: p10_cu.H  p10_scom_addr.C  p10_scom_addr.H  p10_scominfo.C  p10_scominfo.H  p10_spr_name_map.C  p10_spr_name_map.H  p10_spr_name_map_info.H
src/p10/ekb/odyssey/scom_info/: odyssey_cu.H  odyssey_cu_utils.H  odyssey_scom_addr.C  odyssey_scom_addr.H  odyssey_scominfo.C  odyssey_scominfo.H
src/p9/: p9_edbgCipDllInstrCtrl.C  p9_edbgCipDllInstrCtrl.H  p9_edbgEcmdDllScom.C  p9_edbgEcmdDllScom.H
src/p9/ekb/: p9_cu.H  p9_scom_addr.H  p9_scominfo.C  p9_scominfo.H
src/regaccess/: ecmdMapSpr2Str.C  ecmdMapSpr2Str.H
src/vpd/: lhtVpd.C  lhtVpd.H  lhtVpdDevice.C  lhtVpdDevice.H  lhtVpdFile.C  lhtVpdFile.H
